[package]
name = "edgeab-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
edge-tts = { git = "https://github.com/ganlvtech/edge-tts.git", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.8"
xmltree = "0.11"
regex = "1"
clap = { version = "4.5", features = ["derive"] }
rbook = "0.5.0"
scraper = "0.20.0"
image = "0.25.2"
colored = "2.1"
mp4ameta = "0.11"